// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu should render Default 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      class="group text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled"
      data-slot="dropdown-menu-trigger"
      data-state="closed"
      id="radix-«r0»"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis-vertical text-label-normal group-disabled:text-label-disabled dark:text-dark-label-normal dark:group-disabled:text-dark-label-disabled text-label-normal dark:text-dark-label-normal"
        component="[object Object]"
        fill="none"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="12"
          cy="5"
          r="1"
        />
        <circle
          cx="12"
          cy="19"
          r="1"
        />
      </svg>
    </button>
  </div>
</body>
`;

exports[`DropdownMenu should render WithCustomTrigger 1`] = `
<body>
  <div>
    <script
      nonce=""
    >
      ((e, s, n, l, o, d, u, h)=&gt;{
    let m = document.documentElement, w = [
        "light",
        "dark"
    ];
    function p(r) {
        (Array.isArray(e) ? e : [
            e
        ]).forEach((y)=&gt;{
            let k = y === "class", S = k && d ? o.map((f)=&gt;d[f] || f) : o;
            k ? (m.classList.remove(...S), m.classList.add(d && d[r] ? d[r] : r)) : m.setAttribute(y, r);
        }), C(r);
    }
    function C(r) {
        h && w.includes(r) && (m.style.colorScheme = r);
    }
    function a() {
        return window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
    }
    if (l) p(l);
    else try {
        let r = localStorage.getItem(s) || n, y = u && r === "system" ? a() : r;
        p(y);
    } catch (r) {}
})("class","theme","system",null,["light","dark"],null,true,true)
    </script>
    <section
      aria-atomic="false"
      aria-label="Notifications alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      tabindex="-1"
    />
    <button
      type="button"
    >
      Open menu
    </button>
  </div>
</body>
`;
